--- a/site/index.html
+++ b/site/index.html
@@ -2,8 +2,13 @@
 <html>
     <head>
         <title>Hello Coursera!</title>
+        <style>
+            p+h1 {
+                color: "blue";
+            }
+        </style>
     </head>
     <body>
-        <h1>Hello Coursera! Hello World!</h1>
+        <h1>Hello Coursera! How are you?</h1>
     </body>
 </html>
