--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
         <title>Hello Coursera!</title>
         <style>
             h1 {
-                color: "blue";
+                color:blue;
             }
         </style>
     </head>
