--- a/site/index.html
+++ b/site/index.html
@@ -6,9 +6,21 @@
             h1 {
                 color:blue;
             }
+            a:hover div:nth-child(5){
+                font-size: 24px;
+            }
         </style>
     </head>
     <body>
         <h1>Hello Coursera! How are you?</h1>
+
+        <a>
+            <div>Div 1</div>
+            <div>Div 2</div>
+            <div>Div 3</div>
+            <div>Div 4</div>
+            <div>Div 5</div>
+            <div>Div 6</div>
+        </a>
     </body>
 </html>
